--- a/unknown_ef2cjq.predict.json
+++ b/unknown_ef2cjq.predict.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_ef2cjq.predict",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ef2cjq.predict",
 	"sector": "K_9564",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568715896909,
+	"last_scraped": 1568731755868,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568696575310,
-	"edit": 207,
+	"updt": 1568715969870,
+	"edit": 208,
 	"output": [
 		{
 			"args": {},
-			"calls": 6800962,
+			"calls": 7408962,
 			"base": "WIP. Stay tuned for updates",
 			"fragments": [
 				"card ",
@@ -48,11 +48,11 @@
 			]
 		}
 	],
-	"next_scrape": 1568759731128,
+	"next_scrape": 1568776190653,
 	"pl_output": "WIP. Stay tuned for updates",
 	"cannot_identify": true,
 	"scrape_ct": 14,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568715896909,
+	"last_update": 1568731755868,
 	"old_output": "WIP. Stay tuned for updates"
 }
