--- a/unknown_rjrzwu.fuckthisshitimout.json
+++ b/unknown_rjrzwu.fuckthisshitimout.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_rjrzwu.fuckthisshitimout",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_rjrzwu.fuckthisshitimout",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564141596158,
-	"last_scraped": 1568716530253,
+	"last_scraped": 1568732478667,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564141596158
 		}
 	],
-	"next_scrape": 1568760478367,
+	"next_scrape": 1568775686120,
 	"category": "plant_sim",
-	"last_update": 1568716530253,
+	"last_update": 1568732478667,
 	"output": [
 		{
 			"args": {},
@@ -200,7 +200,7 @@
 		},
 		{
 			"args": {},
-			"calls": 1029,
+			"calls": 2374,
 			"base": "c:\"kmgwj7\" d:\"<f l n s w>\"\n****\n\n\n\n               \n                Ã\n               ÃOÃo\n                ÃÃ\n               ",
 			"fragments": [
 				"vanced",
@@ -226,6 +226,6 @@
 			]
 		}
 	],
-	"updt": 1568697481633,
-	"edit": 133
+	"updt": 1568716647856,
+	"edit": 134
 }
