--- a/uknown_81uxoj.chat.json
+++ b/uknown_81uxoj.chat.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_81uxoj.chat",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_81uxoj.chat",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564168295048,
-	"last_scraped": 1568716580000,
+	"last_scraped": 1568732519273,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 13,
-	"next_scrape": 1568756747370,
+	"next_scrape": 1568776130390,
 	"category": "fishie_tank",
-	"last_update": 1568716580000,
+	"last_update": 1568732531188,
 	"output": [
 		{
 			"args": {},
-			"calls": 176851,
+			"calls": 187528,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				" Mall",
@@ -48,7 +48,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 17687,
+			"calls": 18304,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -106,8 +106,8 @@
 			]
 		}
 	],
-	"updt": 1568697481633,
-	"edit": 18,
+	"updt": 1568716647856,
+	"edit": 19,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -119,6 +119,11 @@
 				"rry Chr",
 				"\\n221D Me"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"do": "clean"
 		}
 	]
 }
