--- a/unknown_f06mr7.scripts_lib.json
+++ b/unknown_f06mr7.scripts_lib.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_f06mr7.scripts_lib",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_f06mr7.scripts_lib",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561324860799,
-	"last_scraped": 1568722679498,
+	"last_scraped": 1568739862529,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 12,
-	"next_scrape": 1568764367754,
+	"next_scrape": 1568785198586,
 	"category": "dice_roller",
-	"last_update": 1568722679498,
+	"last_update": 1568739862529,
 	"output": [
 		{
 			"args": {},
-			"calls": 2464464,
+			"calls": 2484799,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ST0X9",
@@ -65,8 +65,8 @@
 			]
 		}
 	],
-	"updt": 1568703119322,
-	"edit": 253,
+	"updt": 1568722736007,
+	"edit": 254,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
