--- a/uknown_wpgu3n.lime.json
+++ b/uknown_wpgu3n.lime.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_wpgu3n.lime",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_wpgu3n.lime",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564532412979,
-	"last_scraped": 1568722989874,
+	"last_scraped": 1568740223131,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564532412979
 		}
 	],
-	"next_scrape": 1568767932622,
+	"next_scrape": 1568781546925,
 	"category": "plant_sim",
-	"last_update": 1568722989874,
+	"last_update": 1568740223131,
 	"output": [
 		{
 			"args": {},
@@ -147,7 +147,7 @@
 		},
 		{
 			"args": {},
-			"calls": 132667,
+			"calls": 134289,
 			"base": "c:\"8peilp\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				" like",
@@ -193,6 +193,6 @@
 			]
 		}
 	],
-	"updt": 1568703346056,
-	"edit": 207
+	"updt": 1568723636398,
+	"edit": 208
 }
