--- a/anon_t4txpe.account_settings.json
+++ b/anon_t4txpe.account_settings.json
@@ -1,25 +1,25 @@
 {
 	"_id": "anon_t4txpe.account_settings",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "anon_t4txpe.account_settings",
 	"sector": "K_7542",
 	"sec_level": 4,
 	"date_added": 1561560824535,
-	"last_scraped": 1568726420145,
+	"last_scraped": 1568743455008,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561560824535
 		}
 	],
-	"next_scrape": 1568770714782,
+	"next_scrape": 1568787371331,
 	"category": "clicker",
-	"last_update": 1568726420145,
+	"last_update": 1568743455008,
 	"output": [
 		{
 			"args": {},
-			"calls": 559133,
+			"calls": 563379,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"l and",
@@ -57,7 +57,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 652951,
+			"calls": 663658,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"l and",
@@ -130,8 +130,8 @@
 			]
 		}
 	],
-	"updt": 1568707402021,
-	"edit": 72,
+	"updt": 1568727021722,
+	"edit": 73,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -144,6 +144,11 @@
 				"0B4 det",
 				" stack "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
