--- a/unknown_piriip.db.json
+++ b/unknown_piriip.db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_piriip.db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_piriip.db",
 	"sector": "SPC_9897",
 	"sec_level": 4,
 	"date_added": 1566014947228,
-	"last_scraped": 1568728320059,
+	"last_scraped": 1568744363318,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568774353251,
+	"next_scrape": 1568786677413,
 	"category": "clicker",
-	"last_update": 1568728320059,
+	"last_update": 1568744363318,
 	"output": [
 		{
 			"args": {},
-			"calls": 40643,
+			"calls": 47399,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ms th",
@@ -48,7 +48,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 36384,
+			"calls": 41198,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ms th",
@@ -76,7 +76,7 @@
 			"args": {
 				"CLICK": true
 			},
-			"calls": 8741,
+			"calls": 10159,
 			"base": "`LCLICK SECURED`",
 			"fragments": [
 				"ms th",
@@ -101,8 +101,8 @@
 			]
 		}
 	],
-	"updt": 1568711457884,
-	"edit": 6,
+	"updt": 1568728827801,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "Erin File",
