--- a/derelict_t9xwp1.wrapper.json
+++ b/derelict_t9xwp1.wrapper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_t9xwp1.wrapper",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_t9xwp1.wrapper",
 	"sector": "VNP_7825",
 	"sec_level": 4,
 	"date_added": 1566482303761,
-	"last_scraped": 1568728429227,
+	"last_scraped": 1568744432240,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568770136496,
+	"next_scrape": 1568785062058,
 	"category": "fishie_tank",
-	"last_update": 1568728429227,
+	"last_update": 1568744432240,
 	"output": [
 		{
 			"args": {},
-			"calls": 43380,
+			"calls": 49093,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				" ## S",
@@ -46,7 +46,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 4232,
+			"calls": 5250,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -77,7 +77,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 58649,
+			"calls": 62628,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				" ## S",
@@ -100,8 +100,8 @@
 			]
 		}
 	],
-	"updt": 1568711685121,
-	"edit": 6,
+	"updt": 1568728827801,
+	"edit": 7,
 	"identified": [
 		{
 			"document": "Prisoners",
