--- a/uknown_en4eip.lib.json
+++ b/uknown_en4eip.lib.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_en4eip.lib",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_en4eip.lib",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565864981372,
-	"last_scraped": 1568730297389,
+	"last_scraped": 1568745215952,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1568775111160,
+	"next_scrape": 1568785002686,
 	"category": "clicker",
-	"last_update": 1568730297389,
+	"last_update": 1568745215952,
 	"output": [
 		{
 			"args": {},
-			"calls": 70569,
+			"calls": 82377,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"iles ",
@@ -50,7 +50,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 72279,
+			"calls": 78917,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"iles ",
@@ -107,8 +107,8 @@
 			]
 		}
 	],
-	"updt": 1568714164844,
-	"edit": 8,
+	"updt": 1568731142156,
+	"edit": 9,
 	"identified": [
 		{
 			"document": "MFT0XD7_CLST0XF7_SECT0X1D2F_FILE0X3A848D07",
@@ -121,6 +121,11 @@
 				"iors | ",
 				"ent over"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
