--- a/unknown_j1o9bp.chat.json
+++ b/unknown_j1o9bp.chat.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_j1o9bp.chat",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_j1o9bp.chat",
 	"sector": "K_4785",
 	"sec_level": 4,
 	"date_added": 1565738922302,
-	"last_scraped": 1568730700960,
+	"last_scraped": 1568745357756,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1568774347835,
+	"next_scrape": 1568788846868,
 	"category": "fishie_tank",
-	"last_update": 1568730700960,
+	"last_update": 1568745357756,
 	"output": [
 		{
 			"args": {},
-			"calls": 66984,
+			"calls": 74687,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"_FILE",
@@ -56,7 +56,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 8042,
+			"calls": 8513,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -97,7 +97,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 63292,
+			"calls": 65594,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"_FILE",
@@ -130,8 +130,8 @@
 			]
 		}
 	],
-	"updt": 1568714616068,
-	"edit": 9,
+	"updt": 1568745344626,
+	"edit": 11,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
