--- a/unidentified_ls9dee.wrapper.json
+++ b/unidentified_ls9dee.wrapper.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unidentified_ls9dee.wrapper",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unidentified_ls9dee.wrapper",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566906741393,
-	"last_scraped": 1568731603849,
+	"last_scraped": 1568745981502,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 18,
-	"next_scrape": 1568773577376,
+	"next_scrape": 1568790823572,
 	"category": "clicker",
-	"last_update": 1568731603849,
+	"last_update": 1568745981502,
 	"output": [
 		{
 			"args": {},
-			"calls": 88665,
+			"calls": 92775,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"provi",
@@ -275,8 +275,8 @@
 			]
 		}
 	],
-	"updt": 1568715969870,
-	"edit": 14,
+	"updt": 1568731817449,
+	"edit": 15,
 	"identified": [
 		{
 			"document": "NOT FOUND",
@@ -338,6 +338,14 @@
 			"frags": [
 				"nd that "
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"click": true
+		},
+		{
+			"CLICK": true
 		}
 	]
 }
