--- a/abndnd_nowjtq.hk_auction_house.json
+++ b/abndnd_nowjtq.hk_auction_house.json
@@ -6,22 +6,22 @@
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563098745814,
-	"last_scraped": 1568733919355,
+	"last_scraped": 1568747957478,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563098745814
 		}
 	],
-	"updt": 1568718001685,
-	"edit": 84,
-	"next_scrape": 1568776470155,
+	"updt": 1568734072690,
+	"edit": 85,
+	"next_scrape": 1568794689650,
 	"category": "dice_roller",
-	"last_update": 1568733919355,
+	"last_update": 1568747957478,
 	"output": [
 		{
 			"args": {},
-			"calls": 989766,
+			"calls": 1003232,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"s the",
