--- a/uknown_ayqcsi.accnt.json
+++ b/uknown_ayqcsi.accnt.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.accnt",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ayqcsi.accnt",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568733788982,
+	"last_scraped": 1568747787800,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,12 +21,12 @@
 			}
 		]
 	],
-	"updt": 1568717777132,
-	"edit": 170,
+	"updt": 1568733846337,
+	"edit": 171,
 	"output": [
 		{
 			"args": {},
-			"calls": 38607762,
+			"calls": 39241821,
 			"base": "soe stuff about anagrams",
 			"fragments": [
 				"t. so",
@@ -59,10 +59,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568775417918,
+	"next_scrape": 1568788430183,
 	"pl_output": "soe stuff about anagrams",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568733788982,
+	"last_update": 1568747787800,
 	"old_output": "soe stuff about anagrams",
 	"identified": [
 		{
