--- a/unknown_dc3cah.pub_vz2zxe.json
+++ b/unknown_dc3cah.pub_vz2zxe.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_dc3cah.pub_vz2zxe",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_dc3cah.pub_vz2zxe",
 	"sector": "HJG_8307",
 	"sec_level": 4,
@@ -11,6 +11,10 @@
 		{
 			"type": "added",
 			"when": 1562307893102
+		},
+		{
+			"type": "died",
+			"when": 1568750229940
 		}
 	],
 	"next_scrape": 1568784256478,
@@ -140,6 +144,6 @@
 			]
 		}
 	],
-	"updt": 1568728827801,
-	"edit": 42
+	"updt": 1568744894922,
+	"edit": 43
 }
