--- a/unknown_efra6o.bot_brain.json
+++ b/unknown_efra6o.bot_brain.json
@@ -6,20 +6,20 @@
 	"sector": "K_7542",
 	"sec_level": 4,
 	"date_added": 1561581886645,
-	"last_scraped": 1568743412184,
+	"last_scraped": 1568756122956,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561581886645
 		}
 	],
-	"next_scrape": 1568786182459,
+	"next_scrape": 1568799584159,
 	"category": "clicker",
-	"last_update": 1568743412184,
+	"last_update": 1568756122956,
 	"output": [
 		{
 			"args": {},
-			"calls": 237469,
+			"calls": 253177,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"ou've",
@@ -55,7 +55,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 264185,
+			"calls": 268467,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"ou've",
@@ -124,8 +124,8 @@
 			]
 		}
 	],
-	"updt": 1568727021722,
-	"edit": 29,
+	"updt": 1568743542410,
+	"edit": 30,
 	"identified": [
 		{
 			"document": "MFT0XBF_CLST0X7A_SECT0XF227_FILE0X2BC7D171",
@@ -137,6 +137,11 @@
 				"5 You'v",
 				"allory\\n"
 			]
+		}
+	],
+	"retry_args": [
+		{
+			"CLICK": true
 		}
 	]
 }
