--- a/uknown_bki41s.log.json
+++ b/uknown_bki41s.log.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_bki41s.log",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "timeout",
 	"script": "uknown_bki41s.log",
 	"sector": "K_9556",
 	"sec_level": 4,
 	"date_added": 1563507854841,
-	"last_scraped": 1568743969359,
+	"last_scraped": 1568756381967,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 20,
-	"next_scrape": 1568827959515,
+	"next_scrape": 1568839601495,
 	"category": "risk_factor",
-	"last_update": 1568743959936,
+	"last_update": 1568756381967,
 	"output": [
 		{
 			"args": {},
@@ -772,7 +772,7 @@
 			"args": {
 				"do": "win"
 			},
-			"calls": 1085,
+			"calls": 1247,
 			"base": "YOU WON 2GC\n...if i could afford to pay out.",
 			"fragments": [
 				"9",
@@ -789,13 +789,10 @@
 			]
 		}
 	],
-	"updt": 1568728150786,
-	"edit": 9,
+	"updt": 1568743993635,
+	"edit": 10,
 	"pl_output": "YOU COULD WIN 2GC with do:\"win\"\n\nOR\n\nYOU COULD `VLOSE`",
 	"retry_args": [
-		{
-			"do": "win"
-		},
 		{
 			"do": "LOSE"
 		}
