--- a/unknown_w804en.echelon_mirror_11.json
+++ b/unknown_w804en.echelon_mirror_11.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_w804en.echelon_mirror_11",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_w804en.echelon_mirror_11",
 	"sector": "HJG_5959",
 	"sec_level": 4,
 	"date_added": 1561843770750,
-	"last_scraped": 1568744262540,
+	"last_scraped": 1568756645014,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561843770750
 		}
 	],
-	"next_scrape": 1568787383919,
+	"next_scrape": 1568798110545,
 	"category": "clicker",
-	"last_update": 1568744262540,
+	"last_update": 1568756645014,
 	"output": [
 		{
 			"args": {},
-			"calls": 560467,
+			"calls": 569180,
 			"base": "~~ `NCLICKER` `hGENERIC` `JRUSH` `HEX` `IPLUS` `DGAMMA` ~~\n\n`NCLICK` FOR `ICLICKS`\n`NCLICK` FOR `DGLORY`",
 			"fragments": [
 				"l ## ",
@@ -51,7 +51,7 @@
 			"args": {
 				"click": true
 			},
-			"calls": 593209,
+			"calls": 604031,
 			"base": "I CANT HEAR YOU! `NCLICK` HARDER",
 			"fragments": [
 				"l ## ",
@@ -149,6 +149,11 @@
 			]
 		}
 	],
-	"updt": 1568728827801,
-	"edit": 69
+	"updt": 1568744444074,
+	"edit": 70,
+	"retry_args": [
+		{
+			"CLICK": true
+		}
+	]
 }
