--- a/uknown_tzek5a.recursion.json
+++ b/uknown_tzek5a.recursion.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_tzek5a.recursion",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_tzek5a.recursion",
 	"sector": "HJG_6509",
 	"sec_level": 4,
 	"date_added": 1562434917664,
-	"last_scraped": 1568744100274,
+	"last_scraped": 1568756524276,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562434917664
 		}
 	],
-	"next_scrape": 1568788541726,
+	"next_scrape": 1568798184752,
 	"category": "fishie_tank",
-	"last_update": 1568744100274,
+	"last_update": 1568756524276,
 	"output": [
 		{
 			"args": {},
-			"calls": 355386,
+			"calls": 362154,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"FILE0",
@@ -56,7 +56,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 34154,
+			"calls": 34840,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -98,7 +98,7 @@
 			"args": {
 				"do": "clean"
 			},
-			"calls": 378084,
+			"calls": 385311,
 			"base": "Fishies are happy. Algea eaters are displeased.",
 			"fragments": [
 				"FILE0",
@@ -148,6 +148,6 @@
 			]
 		}
 	],
-	"updt": 1568728150786,
-	"edit": 38
+	"updt": 1568744219679,
+	"edit": 39
 }
