--- a/unknown_puquph.game.json
+++ b/unknown_puquph.game.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_puquph.game",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_puquph.game",
 	"sector": "NGC_2512",
 	"sec_level": 4,
 	"date_added": 1559517678336,
-	"last_scraped": 1568746140143,
+	"last_scraped": 1568757676213,
 	"script_log": [
 		{
 			"type": "added",
@@ -21,17 +21,17 @@
 			}
 		]
 	],
-	"updt": 1568731817449,
-	"edit": 323,
+	"updt": 1568746473624,
+	"edit": 324,
 	"pl_output": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
-	"next_scrape": 1568786222130,
+	"next_scrape": 1568798910660,
 	"scrape_ct": 17,
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568746140143,
+	"last_update": 1568757676213,
 	"output": [
 		{
 			"args": {},
-			"calls": 4149152,
+			"calls": 4498290,
 			"base": "hello world! make sure not to eat a lot of poop because poop is unhealthy",
 			"fragments": [
 				"nd 'la",
