--- a/unknown_vhzebu.blackjack.json
+++ b/unknown_vhzebu.blackjack.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_vhzebu.blackjack",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_vhzebu.blackjack",
 	"sector": "K_6830",
 	"sec_level": 4,
 	"date_added": 1566878416405,
-	"last_scraped": 1568759057289,
+	"last_scraped": 1568759098847,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566878416405
 		}
 	],
-	"next_scrape": 1568799622831,
+	"next_scrape": 1568838805559,
 	"category": "dice_roller",
-	"last_update": 1568759057289,
+	"last_update": 1568759098847,
 	"output": [
 		{
 			"args": {},
-			"calls": 525835,
+			"calls": 537549,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ory is",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568747602679,
-	"edit": 37
+	"updt": 1568759063480,
+	"edit": 38
 }
