--- a/unknown_v602ar.ez_25_hack.json
+++ b/unknown_v602ar.ez_25_hack.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_v602ar.ez_25_hack",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_v602ar.ez_25_hack",
 	"sector": "NGC_7203",
 	"sec_level": 4,
 	"date_added": 1566848734834,
-	"last_scraped": 1568753770785,
+	"last_scraped": 1568764982369,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 15,
-	"next_scrape": 1568793842607,
+	"next_scrape": 1568811671339,
 	"category": "coin_flipper",
-	"last_update": 1568753770785,
+	"last_update": 1568764982369,
 	"output": [
 		{
 			"args": {},
-			"calls": 1414064,
+			"calls": 1425530,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"320B1",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1568740836717,
-	"edit": 147
+	"updt": 1568753871990,
+	"edit": 148
 }
