--- a/unknown_0qz0kr.flood.json
+++ b/unknown_0qz0kr.flood.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_0qz0kr.flood",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0qz0kr.flood",
 	"sector": "K_8441",
 	"sec_level": 4,
 	"date_added": 1562051982595,
-	"last_scraped": 1568777990667,
+	"last_scraped": 1568778011981,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562051982595
 		}
 	],
-	"updt": 1568758837142,
-	"edit": 274,
-	"next_scrape": 1568823401811,
+	"updt": 1568778010772,
+	"edit": 275,
+	"next_scrape": 1568824048355,
 	"category": "dice_roller",
-	"last_update": 1568777990667,
+	"last_update": 1568778011981,
 	"output": [
 		{
 			"args": {},
-			"calls": 2927319,
+			"calls": 2930036,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"NSURI",
