--- a/unknown_cr8xej.t1_db.json
+++ b/unknown_cr8xej.t1_db.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_cr8xej.t1_db",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_cr8xej.t1_db",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565258632124,
-	"last_scraped": 1568758916499,
+	"last_scraped": 1568778131121,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 10,
-	"next_scrape": 1568800023648,
+	"next_scrape": 1568819855228,
 	"category": "plant_sim",
-	"last_update": 1568758916499,
+	"last_update": 1568778131121,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 28122,
+			"calls": 28996,
 			"base": "c:\"wbuk80\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"| PROG ",
@@ -71,8 +71,8 @@
 			]
 		}
 	],
-	"updt": 1568747377493,
-	"edit": 36,
+	"updt": 1568759063480,
+	"edit": 37,
 	"identified": [
 		{
 			"document": "MFT0XF1_CLST0X75_SECT0X73F7_FILE0X9CB5E952",
