--- a/uknown_156c0c.trans.json
+++ b/uknown_156c0c.trans.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_156c0c.trans",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_156c0c.trans",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561314287180,
-	"last_scraped": 1568759775800,
+	"last_scraped": 1568782501492,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561314287180
 		}
 	],
-	"next_scrape": 1568802950006,
+	"next_scrape": 1568823540001,
 	"category": "coin_flipper",
-	"last_update": 1568759775800,
+	"last_update": 1568782501492,
 	"output": [
 		{
 			"args": {},
-			"calls": 2257971,
+			"calls": 2265997,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"u? Tw",
@@ -213,8 +213,8 @@
 			]
 		}
 	],
-	"updt": 1568749142313,
-	"edit": 214,
+	"updt": 1568759964974,
+	"edit": 215,
 	"identified": [
 		{
 			"document": "NOT FOUND",
