--- a/uknown_ayqcsi.riot.json
+++ b/uknown_ayqcsi.riot.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.riot",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ayqcsi.riot",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568760550324,
+	"last_scraped": 1568783344585,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568749594127,
-	"edit": 218,
+	"updt": 1568760641987,
+	"edit": 219,
 	"output": [
 		{
 			"args": {},
-			"calls": 48017094,
+			"calls": 48423244,
 			"base": "User not recognized, aborting...",
 			"fragments": [
 				"treng",
@@ -77,10 +77,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568803665117,
+	"next_scrape": 1568825617677,
 	"pl_output": "User not recognized, aborting...",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568760550324,
+	"last_update": 1568783344585,
 	"old_output": "User not recognized, aborting...",
 	"identified": [
 		{
