--- a/uknown_b6y9vb.peddle.json
+++ b/uknown_b6y9vb.peddle.json
@@ -1,7 +1,7 @@
 {
 	"_id": "uknown_b6y9vb.peddle",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_b6y9vb.peddle",
 	"sector": "K_8416",
 	"sec_level": 0,
@@ -21,8 +21,8 @@
 			}
 		]
 	],
-	"updt": 1568749142313,
-	"edit": 60,
+	"updt": 1568760415671,
+	"edit": 61,
 	"pl_output": "{\"ok\":true,\"msg\":\"\"}",
 	"next_scrape": 1568849711329
 }
