--- a/unknown_0o6wpi.paypal.json
+++ b/unknown_0o6wpi.paypal.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_0o6wpi.paypal",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_0o6wpi.paypal",
 	"sector": "HJG_0482",
 	"sec_level": 4,
 	"date_added": 1565327917562,
-	"last_scraped": 1568761292950,
+	"last_scraped": 1568784938927,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565327917562
 		}
 	],
-	"next_scrape": 1568802660149,
+	"next_scrape": 1568828460258,
 	"category": "plant_sim",
-	"last_update": 1568761292950,
+	"last_update": 1568784938927,
 	"output": [
 		{
 			"args": {},
@@ -43,7 +43,7 @@
 		},
 		{
 			"args": {},
-			"calls": 59656,
+			"calls": 61251,
 			"base": "c:\"dep9ej\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"uild w",
@@ -102,6 +102,6 @@
 			]
 		}
 	],
-	"updt": 1568749819606,
-	"edit": 100
+	"updt": 1568761318403,
+	"edit": 101
 }
