--- a/unknown_6mixmg.whitelist.json
+++ b/unknown_6mixmg.whitelist.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_8561",
 	"sec_level": 4,
 	"date_added": 1566979293534,
-	"last_scraped": 1568761111811,
+	"last_scraped": 1568784776845,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 4,
-	"next_scrape": 1568800754249,
+	"next_scrape": 1568827424428,
 	"category": "plant_sim",
-	"last_update": 1568761111811,
+	"last_update": 1568784776845,
 	"output": [
 		{
 			"args": {},
@@ -229,6 +229,23 @@
 				"ld bring",
 				", impres"
 			]
+		},
+		{
+			"args": {},
+			"calls": 1728,
+			"base": "c:\"jxs8op\" d:\"<f l n s w>\"\n\n\n\n            \n              Ã    ___\n            /Ã Á/Á/Á ÁÁ\n            ( Ã|Á\\ÃÁ'\n            ",
+			"fragments": [
+				"ould b",
+				"l, e, ",
+				"## goo",
+				" obstr",
+				"g to be",
+				"d you c",
+				", e, im",
+				"ng max a",
+				"ld bring",
+				", impres"
+			]
 		}
 	],
 	"identified": [
@@ -253,6 +270,6 @@
 			]
 		}
 	],
-	"updt": 1568749819606,
-	"edit": 67
+	"updt": 1568784776897,
+	"edit": 69
 }
