--- a/uknown_dk37v3.npcs.json
+++ b/uknown_dk37v3.npcs.json
@@ -6,7 +6,7 @@
 	"sector": "SPC_4016",
 	"sec_level": 4,
 	"date_added": 1566817634405,
-	"last_scraped": 1568763182029,
+	"last_scraped": 1568787118173,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 7,
-	"next_scrape": 1568804551745,
+	"next_scrape": 1568832688433,
 	"category": "plant_sim",
-	"last_update": 1568763182029,
+	"last_update": 1568787118173,
 	"output": [
 		{
 			"args": {},
@@ -101,6 +101,18 @@
 				"p.\\n2041",
 				" 3 decks"
 			]
+		},
+		{
+			"args": {},
+			"calls": 980,
+			"base": "c:\"mgvlps\" d:\"<f l n s w>\"\n\n\n\n\n                \n                Ã\n                ÁÃ\n                ",
+			"fragments": [
+				"cks o",
+				" face ",
+				"of 13, ",
+				"p.\\n2041",
+				" 3 decks"
+			]
 		}
 	],
 	"identified": [
@@ -115,6 +127,6 @@
 			]
 		}
 	],
-	"updt": 1568752071496,
-	"edit": 123
+	"updt": 1568763345590,
+	"edit": 124
 }
