--- a/unknown_nipj21.t2_experimental.json
+++ b/unknown_nipj21.t2_experimental.json
@@ -1,27 +1,27 @@
 {
 	"_id": "unknown_nipj21.t2_experimental",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_nipj21.t2_experimental",
 	"sector": "K_4792",
 	"sec_level": 4,
 	"date_added": 1561403525545,
-	"last_scraped": 1568768672628,
+	"last_scraped": 1568792635068,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561403525545
 		}
 	],
-	"updt": 1568758162609,
-	"edit": 294,
-	"next_scrape": 1568814303512,
+	"updt": 1568768761800,
+	"edit": 295,
+	"next_scrape": 1568833768778,
 	"category": "coin_flipper",
-	"last_update": 1568768672628,
+	"last_update": 1568792635068,
 	"output": [
 		{
 			"args": {},
-			"calls": 3190412,
+			"calls": 3207567,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"tions",
