--- a/unknown_bjl3my.extras.json
+++ b/unknown_bjl3my.extras.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_bjl3my.extras",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_bjl3my.extras",
 	"sector": "VNP_2284",
 	"sec_level": 4,
 	"date_added": 1563713987809,
-	"last_scraped": 1568768803013,
+	"last_scraped": 1568792944196,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563713987809
 		}
 	],
-	"next_scrape": 1568813483022,
+	"next_scrape": 1568838473182,
 	"category": "dice_roller",
-	"last_update": 1568768803013,
+	"last_update": 1568792944196,
 	"output": [
 		{
 			"args": {},
-			"calls": 787021,
+			"calls": 804404,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"FILE0",
@@ -78,6 +78,6 @@
 			]
 		}
 	],
-	"updt": 1568758388456,
-	"edit": 70
+	"updt": 1568769438870,
+	"edit": 71
 }
