--- a/derelict_nnxezh.uick_start.json
+++ b/derelict_nnxezh.uick_start.json
@@ -1,12 +1,12 @@
 {
 	"_id": "derelict_nnxezh.uick_start",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "derelict_nnxezh.uick_start",
 	"sector": "NGC_4040",
 	"sec_level": 4,
 	"date_added": 1565629679587,
-	"last_scraped": 1568778069139,
+	"last_scraped": 1568794051160,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,9 +14,9 @@
 		}
 	],
 	"scrape_ct": 2,
-	"next_scrape": 1568820775619,
+	"next_scrape": 1568837357770,
 	"category": "plant_sim",
-	"last_update": 1568778069139,
+	"last_update": 1568794051160,
 	"output": [
 		{
 			"args": {},
@@ -46,7 +46,7 @@
 		},
 		{
 			"args": {},
-			"calls": 31894,
+			"calls": 34690,
 			"base": "c:\"35jidh\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"appen",
@@ -84,6 +84,6 @@
 			]
 		}
 	],
-	"updt": 1568759063480,
-	"edit": 35
+	"updt": 1568794029015,
+	"edit": 37
 }
