--- a/uknown_69y5dg.cubit_hash128.json
+++ b/uknown_69y5dg.cubit_hash128.json
@@ -1,21 +1,21 @@
 {
 	"_id": "uknown_69y5dg.cubit_hash128",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_69y5dg.cubit_hash128",
 	"sector": "K_2748",
 	"sec_level": 4,
 	"date_added": 1564086338794,
-	"last_scraped": 1568793115954,
+	"last_scraped": 1568793125546,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564086338794
 		}
 	],
-	"next_scrape": 1568839864277,
+	"next_scrape": 1568839860467,
 	"category": "plant_sim",
-	"last_update": 1568793115954,
+	"last_update": 1568793125546,
 	"output": [
 		{
 			"args": {},
@@ -71,7 +71,7 @@
 		},
 		{
 			"args": {},
-			"calls": 114480,
+			"calls": 115202,
 			"base": "c:\"z138o2\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"cific",
@@ -109,6 +109,6 @@
 			]
 		}
 	],
-	"updt": 1568769438870,
-	"edit": 154
+	"updt": 1568793126104,
+	"edit": 155
 }
