--- a/uknown_8pcvow.solve_keyes.json
+++ b/uknown_8pcvow.solve_keyes.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_8pcvow.solve_keyes",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_8pcvow.solve_keyes",
 	"sector": "SPC_2743",
 	"sec_level": 4,
 	"date_added": 1564311134726,
-	"last_scraped": 1568778099566,
+	"last_scraped": 1568794120055,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1564311134726
 		}
 	],
-	"next_scrape": 1568820870212,
+	"next_scrape": 1568840170950,
 	"category": "coin_flipper",
-	"last_update": 1568778099566,
+	"last_update": 1568794120055,
 	"output": [
 		{
 			"args": {},
-			"calls": 849547,
+			"calls": 867891,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ss To",
@@ -368,6 +368,6 @@
 			]
 		}
 	],
-	"updt": 1568759063480,
-	"edit": 67
+	"updt": 1568778236486,
+	"edit": 68
 }
