--- a/uknown_ayqcsi.reason.json
+++ b/uknown_ayqcsi.reason.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_ayqcsi.reason",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_ayqcsi.reason",
 	"sector": "NGC_0709",
 	"sec_level": 4,
 	"date_added": 1558821408422,
-	"last_scraped": 1568768963893,
+	"last_scraped": 1568793366795,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568758613577,
-	"edit": 171,
+	"updt": 1568769438870,
+	"edit": 172,
 	"output": [
 		{
 			"args": {},
-			"calls": 31639448,
+			"calls": 32282334,
 			"base": "User not recognized, aborting...",
 			"fragments": [
 				"E ERR",
@@ -71,10 +71,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568810258898,
+	"next_scrape": 1568837731552,
 	"pl_output": "User not recognized, aborting...",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568768963893,
+	"last_update": 1568793366795,
 	"old_output": "User not recognized, aborting...",
 	"identified": [
 		{
