--- a/uknown_z9w7ru.workshop.json
+++ b/uknown_z9w7ru.workshop.json
@@ -1,27 +1,27 @@
 {
 	"_id": "uknown_z9w7ru.workshop",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_z9w7ru.workshop",
 	"sector": "HJG_5959",
 	"sec_level": 4,
 	"date_added": 1561815721083,
-	"last_scraped": 1568769054269,
+	"last_scraped": 1568793678717,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1561815721083
 		}
 	],
-	"updt": 1568758837142,
-	"edit": 317,
-	"next_scrape": 1568813562665,
+	"updt": 1568769438870,
+	"edit": 318,
+	"next_scrape": 1568839885627,
 	"category": "coin_flipper",
-	"last_update": 1568769054269,
+	"last_update": 1568793678717,
 	"output": [
 		{
 			"args": {},
-			"calls": 3457430,
+			"calls": 3477677,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ter t",
