--- a/unknown_tffux6.db.json
+++ b/unknown_tffux6.db.json
@@ -6,20 +6,20 @@
 	"sector": "K_6458",
 	"sec_level": 4,
 	"date_added": 1566124296849,
-	"last_scraped": 1568785077941,
+	"last_scraped": 1568796180002,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566124296849
 		}
 	],
-	"next_scrape": 1568828575043,
+	"next_scrape": 1568842809519,
 	"category": "dice_roller",
-	"last_update": 1568785077941,
+	"last_update": 1568796180002,
 	"output": [
 		{
 			"args": {},
-			"calls": 995114,
+			"calls": 1013030,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"ton a",
@@ -60,6 +60,6 @@
 			]
 		}
 	],
-	"updt": 1568761542253,
-	"edit": 88
+	"updt": 1568785229295,
+	"edit": 89
 }
