--- a/uknown_h7aui7.bot_midsec.json
+++ b/uknown_h7aui7.bot_midsec.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_h7aui7.bot_midsec",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_h7aui7.bot_midsec",
 	"sector": "K_3804",
 	"sec_level": 4,
 	"date_added": 1564547536219,
-	"last_scraped": 1568787357624,
+	"last_scraped": 1568798189756,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 16,
-	"next_scrape": 1568827981058,
+	"next_scrape": 1568838850133,
 	"category": "dice_roller",
-	"last_update": 1568787357624,
+	"last_update": 1568798189756,
 	"output": [
 		{
 			"args": {},
-			"calls": 1151058,
+			"calls": 1162146,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"tal s",
@@ -51,8 +51,8 @@
 			]
 		}
 	],
-	"updt": 1568763571749,
-	"edit": 131,
+	"updt": 1568787485420,
+	"edit": 132,
 	"identified": [
 		{
 			"document": "MFT0XD1_CLST0X95_SECT0X23E7_FILE0X8CAB060B",
