--- a/unknown_w56b7q.stock.json
+++ b/unknown_w56b7q.stock.json
@@ -1,12 +1,12 @@
 {
 	"_id": "unknown_w56b7q.stock",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_w56b7q.stock",
 	"sector": "K_9897",
 	"sec_level": 2,
 	"date_added": 1558821408422,
-	"last_scraped": 1568795939407,
+	"last_scraped": 1568805452645,
 	"script_log": [
 		{
 			"type": "added",
@@ -25,12 +25,12 @@
 			}
 		]
 	],
-	"updt": 1568785003241,
-	"edit": 414,
+	"updt": 1568796059286,
+	"edit": 415,
 	"output": [
 		{
 			"args": {},
-			"calls": 295172,
+			"calls": 297119,
 			"base": "You are not whitelisted. But you can donate to Doggo Corp. using donate:amount :)",
 			"fragments": [
 				" will",
@@ -75,10 +75,10 @@
 			]
 		}
 	],
-	"next_scrape": 1568842024063,
+	"next_scrape": 1568847606259,
 	"pl_output": "You are not whitelisted. But you can donate to Doggo Corp. using donate:amount :)",
 	"category": "UNKNOWN CATEGORY",
-	"last_update": 1568795939407,
+	"last_update": 1568805452645,
 	"old_output": "You are not whitelisted. But you can donate to Doggo Corp. using donate:amount :)",
 	"identified": [
 		{
