--- a/uknown_67mgos.priv.json
+++ b/uknown_67mgos.priv.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_67mgos.priv",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_67mgos.priv",
 	"sector": "SPC_2500",
 	"sec_level": 4,
 	"date_added": 1563095388516,
-	"last_scraped": 1568797052777,
+	"last_scraped": 1568806498371,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563095388516
 		}
 	],
-	"next_scrape": 1568839342341,
+	"next_scrape": 1568852979516,
 	"category": "coin_flipper",
-	"last_update": 1568797052777,
+	"last_update": 1568806498371,
 	"output": [
 		{
 			"args": {},
-			"calls": 2377093,
+			"calls": 2386465,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"the c",
@@ -90,6 +90,6 @@
 			]
 		}
 	],
-	"updt": 1568786358128,
-	"edit": 212
+	"updt": 1568797184643,
+	"edit": 213
 }
