--- a/unknown_2032zb.bot_brain.json
+++ b/unknown_2032zb.bot_brain.json
@@ -1,7 +1,7 @@
 {
 	"_id": "unknown_2032zb.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "dead",
 	"script": "unknown_2032zb.bot_brain",
 	"sector": "K_6566",
 	"sec_level": 4,
@@ -11,10 +11,14 @@
 		{
 			"type": "added",
 			"when": 1563000670734
+		},
+		{
+			"type": "died",
+			"when": 1568808944936
 		}
 	],
-	"updt": 1568795833401,
-	"edit": 270,
+	"updt": 1568805301033,
+	"edit": 271,
 	"next_scrape": 1568850518493,
 	"category": "coin_flipper",
 	"last_update": 1568805192874,
