--- a/uknown_esu7dm.forums.json
+++ b/uknown_esu7dm.forums.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_esu7dm.forums",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_esu7dm.forums",
 	"sector": "HJG_8307",
 	"sec_level": 4,
 	"date_added": 1562331437354,
-	"last_scraped": 1568802523088,
+	"last_scraped": 1568811772253,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562331437354
 		}
 	],
-	"next_scrape": 1568843286298,
+	"next_scrape": 1568858202156,
 	"category": "fishie_tank",
-	"last_update": 1568802523088,
+	"last_update": 1568811782614,
 	"output": [
 		{
 			"args": {},
-			"calls": 355189,
+			"calls": 366085,
 			"base": "Some fishies are in the tank. They are swimming. and hungry?\ndo:\"feed\" | do:\"clean\"",
 			"fragments": [
 				"sible",
@@ -53,7 +53,7 @@
 			"args": {
 				"do": "feed"
 			},
-			"calls": 37877,
+			"calls": 38384,
 			"base": [
 				"Fishies are happy.",
 				"actuly they look fine",
@@ -139,6 +139,11 @@
 			]
 		}
 	],
-	"updt": 1568791549542,
-	"edit": 40
+	"updt": 1568802596690,
+	"edit": 41,
+	"retry_args": [
+		{
+			"do": "clean"
+		}
+	]
 }
