--- a/unknown_yf9eh6.jpg.json
+++ b/unknown_yf9eh6.jpg.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_yf9eh6.jpg",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_yf9eh6.jpg",
 	"sector": "K_9564",
 	"sec_level": 4,
 	"date_added": 1563841681486,
-	"last_scraped": 1568804146549,
+	"last_scraped": 1568813149901,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563841681486
 		}
 	],
-	"next_scrape": 1568847559727,
+	"next_scrape": 1568856915984,
 	"category": "dice_roller",
-	"last_update": 1568804146549,
+	"last_update": 1568813149901,
 	"output": [
 		{
 			"args": {},
-			"calls": 911016,
+			"calls": 924849,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"erati",
@@ -87,6 +87,6 @@
 			]
 		}
 	],
-	"updt": 1568795157445,
-	"edit": 78
+	"updt": 1568804174742,
+	"edit": 79
 }
