--- a/uknown_irvmv4.uncorrupt.json
+++ b/uknown_irvmv4.uncorrupt.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_irvmv4.uncorrupt",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_irvmv4.uncorrupt",
 	"sector": "HJG_5723",
 	"sec_level": 4,
 	"date_added": 1562216403161,
-	"last_scraped": 1568808556591,
+	"last_scraped": 1568817259901,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1562216403161
 		}
 	],
-	"next_scrape": 1568850763918,
+	"next_scrape": 1568859783813,
 	"category": "dice_roller",
-	"last_update": 1568808556591,
+	"last_update": 1568817259901,
 	"output": [
 		{
 			"args": {},
-			"calls": 2000926,
+			"calls": 2015491,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"e's p",
@@ -88,6 +88,6 @@
 			]
 		}
 	],
-	"updt": 1568799216764,
-	"edit": 208
+	"updt": 1568808686244,
+	"edit": 209
 }
