--- a/unknown_6low11.brainfuck.json
+++ b/unknown_6low11.brainfuck.json
@@ -1,24 +1,24 @@
 {
 	"_id": "unknown_6low11.brainfuck",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_6low11.brainfuck",
 	"sector": "K_9556",
 	"sec_level": 4,
 	"date_added": 1563527761942,
-	"last_scraped": 1568808566895,
+	"last_scraped": 1568817329651,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563527761942
 		}
 	],
-	"updt": 1568799216764,
-	"edit": 156,
+	"updt": 1568808686244,
+	"edit": 157,
 	"scrape_ct": 17,
-	"next_scrape": 1568852763584,
+	"next_scrape": 1568860972377,
 	"category": "plant_sim",
-	"last_update": 1568808566895,
+	"last_update": 1568817329651,
 	"output": [
 		{
 			"args": {},
@@ -50,7 +50,7 @@
 		},
 		{
 			"args": {},
-			"calls": 133198,
+			"calls": 134873,
 			"base": "c:\"su0ggf\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"ng! S",
