--- a/uknown_gi8uls.data_check_sim.json
+++ b/uknown_gi8uls.data_check_sim.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_gi8uls.data_check_sim",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_gi8uls.data_check_sim",
 	"sector": "HJG_7617",
 	"sec_level": 4,
 	"date_added": 1566218845296,
-	"last_scraped": 1568816440635,
+	"last_scraped": 1568825056849,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 3,
-	"next_scrape": 1568856203339,
+	"next_scrape": 1568869420523,
 	"category": "dice_roller",
-	"last_update": 1568816440635,
+	"last_update": 1568825056849,
 	"output": [
 		{
 			"args": {},
-			"calls": 1332962,
+			"calls": 1342373,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"n a f",
@@ -67,6 +67,6 @@
 			]
 		}
 	],
-	"updt": 1568808009162,
-	"edit": 137
+	"updt": 1568816581025,
+	"edit": 138
 }
