--- a/abandoned_tpnxm3.defender.json
+++ b/abandoned_tpnxm3.defender.json
@@ -1,12 +1,12 @@
 {
 	"_id": "abandoned_tpnxm3.defender",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "abandoned_tpnxm3.defender",
 	"sector": "VNP_9604",
 	"sec_level": 4,
 	"date_added": 1565715031572,
-	"last_scraped": 1568818212257,
+	"last_scraped": 1568826914892,
 	"script_log": [
 		{
 			"type": "added",
@@ -14,13 +14,13 @@
 		}
 	],
 	"scrape_ct": 5,
-	"next_scrape": 1568861182210,
+	"next_scrape": 1568868985424,
 	"category": "coin_flipper",
-	"last_update": 1568818212257,
+	"last_update": 1568826914892,
 	"output": [
 		{
 			"args": {},
-			"calls": 1470892,
+			"calls": 1483291,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"ck?\\n2",
@@ -58,6 +58,6 @@
 			]
 		}
 	],
-	"updt": 1568809588776,
-	"edit": 158
+	"updt": 1568818387750,
+	"edit": 159
 }
