--- a/unknown_b8wg6g.protector.json
+++ b/unknown_b8wg6g.protector.json
@@ -1,25 +1,25 @@
 {
 	"_id": "unknown_b8wg6g.protector",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_b8wg6g.protector",
 	"sector": "HJG_2788",
 	"sec_level": 4,
 	"date_added": 1563132582095,
-	"last_scraped": 1568820693027,
+	"last_scraped": 1568829411162,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1563132582095
 		}
 	],
-	"next_scrape": 1568866625252,
+	"next_scrape": 1568875694285,
 	"category": "coin_flipper",
-	"last_update": 1568820693027,
+	"last_update": 1568829411162,
 	"output": [
 		{
 			"args": {},
-			"calls": 1887204,
+			"calls": 1901500,
 			"base": "Flip a coin! heads wins, tails loses. {flip:true}",
 			"fragments": [
 				"sus t",
@@ -70,6 +70,6 @@
 			]
 		}
 	],
-	"updt": 1568812068475,
-	"edit": 168
+	"updt": 1568821093418,
+	"edit": 169
 }
