--- a/uknown_lx2epa.sha256.json
+++ b/uknown_lx2epa.sha256.json
@@ -1,12 +1,12 @@
 {
 	"_id": "uknown_lx2epa.sha256",
 	"type": "fragment",
-	"mode": "player",
+	"mode": "skip",
 	"script": "uknown_lx2epa.sha256",
 	"sector": "K_5861",
 	"sec_level": 4,
 	"date_added": 1561431825883,
-	"last_scraped": 1568822146165,
+	"last_scraped": 1568830616490,
 	"script_log": [
 		{
 			"type": "added",
@@ -26,7 +26,7 @@
 		]
 	],
 	"pl_output": "{\"ok\":false,\"msg\":\"You didn't give me any plaintext. Please pass txt:\\\"textToHash\\\"\"}",
-	"next_scrape": 1568911280239,
-	"updt": 1568813646867,
-	"edit": 96
+	"next_scrape": 1568917286262,
+	"updt": 1568822220697,
+	"edit": 97
 }
