--- a/uknown_yoxqm5.ads.json
+++ b/uknown_yoxqm5.ads.json
@@ -1,25 +1,25 @@
 {
 	"_id": "uknown_yoxqm5.ads",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "uknown_yoxqm5.ads",
 	"sector": "SPC_9562",
 	"sec_level": 4,
 	"date_added": 1566556056558,
-	"last_scraped": 1568822167715,
+	"last_scraped": 1568830727701,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1566556056558
 		}
 	],
-	"next_scrape": 1568865433245,
+	"next_scrape": 1568870768225,
 	"category": "dice_roller",
-	"last_update": 1568822167715,
+	"last_update": 1568830727701,
 	"output": [
 		{
 			"args": {},
-			"calls": 1148684,
+			"calls": 1162291,
 			"base": "Roll the dice!(tm)\n\nbeat the house's roll to win! {roll:true}",
 			"fragments": [
 				"XE2A8",
@@ -66,6 +66,6 @@
 			]
 		}
 	],
-	"updt": 1568813646867,
-	"edit": 101
+	"updt": 1568822220697,
+	"edit": 102
 }
