--- a/unknown_ywicgz.bot_brain.json
+++ b/unknown_ywicgz.bot_brain.json
@@ -1,21 +1,21 @@
 {
 	"_id": "unknown_ywicgz.bot_brain",
 	"type": "fragment",
-	"mode": "npc",
+	"mode": "skip",
 	"script": "unknown_ywicgz.bot_brain",
 	"sector": "K_2655",
 	"sec_level": 4,
 	"date_added": 1565132603473,
-	"last_scraped": 1568823829498,
+	"last_scraped": 1568832430335,
 	"script_log": [
 		{
 			"type": "added",
 			"when": 1565132603473
 		}
 	],
-	"next_scrape": 1568870200989,
+	"next_scrape": 1568872456591,
 	"category": "plant_sim",
-	"last_update": 1568823829498,
+	"last_update": 1568832430335,
 	"output": [
 		{
 			"args": {},
@@ -51,7 +51,7 @@
 		},
 		{
 			"args": {},
-			"calls": 82740,
+			"calls": 84406,
 			"base": "c:\"uvt0kv\" d:\"<f l n s w>\"\n\n\n\n\n\n\n\n          ~~~~~~~~~~~~~~",
 			"fragments": [
 				"at th",
@@ -106,6 +106,6 @@
 			]
 		}
 	],
-	"updt": 1568815451131,
-	"edit": 98
+	"updt": 1568824025468,
+	"edit": 99
 }
